--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
-    <string name="app_name">Asclepius</string>
+    <string name="app_name">Skin Cancer Detector</string>
     <string name="camera_x">CameraX</string>
     <string name="camera">Kamera</string>
     <string name="gallery">Galeri</string>
     <string name="analyze">Analyze</string>
     <string name="result">Hasil Analisis</string>
+    <string name="doctor_icon">doctor icon</string>
+    <string name="titleWelcome">Skin Cancer Detector</string>
+    <string name="deskripsiWelcome">Aplikasi deteksi kanker kulit untuk anda!\nCegah sekarang untuk hari esok yang tenang.\n\n\nCukup sekali klik, sleanjutnya biarkan kami yang bekerja!</string>
+    <string name="deteksi_sekarang">Deteksi Sekarang!</string>
+    <string name="dicoding_submition">Dicoding Submition</string>
 </resources>
