add DateFormatter.kt for date format articles, adjust History fragment and viewmodels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="judul_artikel">Judul Artikel</string>
     <string name="tanggal_publikasi">Tanggal Publikasi</string>
     <string name="author">Author</string>
+    <string name="tv_title_history">Riwayat analisis kanker kulit anda akan disimpan di sini</string>
 </resources>
